fix limits in lexical analyzer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(complierGenerator main.cpp
         NFAcreation.cpp
         constants.h
         DFACreator.cpp
+        DFACreator.h
 )
