--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(complierGenerator)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(complierGenerator main.cpp
-        regexFileReader.cpp
-        postfixRegexConvertor.cpp
-        substitutions.cpp
-        NFAcreation.cpp
+        "phase 1/regexFileReader.cpp"
+        "phase 1/postfixRegexConvertor.cpp"
+        "phase 1/substitutions.cpp"
+        "phase 1/NFAcreation.cpp"
         constants.h
-        DFACreator.cpp
-        DFACreator.h
+        "phase 1/DFACreator.cpp"
+        "phase 1/DFACreator.h"
 )
