some conflict resolve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ add_executable(complierGenerator main.cpp
         "phase 1/DFACreator.cpp"
         "phase 1/DFACreator.h"
         "phase 2/grammarFileParser.cpp"
+        "phase 2/grammarFileParser.h"
         "phase 2/leftRecursionElimination.cpp"
         "phase 2/leftFactoring.cpp"
+        "phase 2/firstFollowCalculator.cpp"
+        "phase 2/firstFollowCalculator.h"
 )
