--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ cmake-build-debug/build.ninja
 cmake-build-debug/cmake_install.cmake
 cmake-build-debug/complierGenerator.exe
 
+.vscode/launch.json
+CMakeLists.txt
+CMakeLists.txt
