some conflict and data resolving

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,11 @@ add_executable(complierGenerator main.cpp
         "phase 2/grammarFileParser.cpp"
         "phase 2/grammarFileParser.h"
         "phase 2/leftRecursionElimination.cpp"
+        "phase 2/leftRecursionElimination.h"
         "phase 2/leftFactoring.cpp"
         "phase 2/firstFollowCalculator.cpp"
-        "phase 2/firstFollowCalculator.h"
+        "phase 2/predictiveParsingTable.cpp"
+        "phase 2/predictiveParsingTable.h"
+        "phase 2/parser.cpp"
+        "phase 2/parser.h"
 )
